--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,25 +1,38 @@
-// Mobile -480px
+// Mobile +360px
 .header {
-  background-color: lightblue;
+  background-color: rgb(185, 230, 245);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 80vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   &__title {
-    font-size: $font-size-l;
+    font-size: $font-size-m;
   }
   &__subtitle {
     padding: 1rem;
-    font-size: $font-size-m;
+    font-size: $font-size-s;
     z-index: $z-normal;
     text-align: center;
   }
 }
+
+// Mobile +480px
+@include mq(s) {
+  .header {
+    &__title {
+      font-size: $font-size-l;
+    }
+    &__subtitle {
+      font-size: $font-size-m;
+    }
+  }
+}
+
 // Tablet +768px
 @include mq(m) {
   .header {
