fix scroto tablet mq

--- a/src/scss/components/_scrollto.scss
+++ b/src/scss/components/_scrollto.scss
@@ -1,8 +1,8 @@
 .scroll_icon {
   cursor: pointer;
-  font-size: $font-size-l;
+  font-size: 3rem;
   position: relative;
-  top: -10px;
+  top: 5px;
   &:hover {
     color: $color-primary;
   }
