fix about me image desktop mq

--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -91,6 +91,8 @@
       gap: 3em;
       &__image {
         height: 400px;
+        width: 400px;
+        position: static;
       }
       &__text {
         flex-direction: column;
