--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -1,3 +1,4 @@
+// Mobile
 .projects {
   display: flex;
   flex-direction: column;
@@ -5,4 +6,14 @@
   align-items: center;
   height: 100vh;
   background-color: lightblue;
+  &__icon {
+    cursor: pointer;
+    font-size: 3rem;
+    position: relative;
+    top: 5px;
+    color: #000;
+    &:hover {
+      color: $color-primary;
+    }
+  }
 }
