--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -13,7 +13,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
   font-family: "Raleway", sans-serif;
 }
 
@@ -22,10 +22,363 @@ body {
   scroll-behavior: smooth;
 }
 
-.nav__logo {
-  text-decoration: none;
-  font-size: 2rem;
-  padding: 0.6em;
+nav, header, section {
+  padding: 0 1em;
+}
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+  overflow: visible;
+  /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none;
+  /* 1 */
+  text-decoration: underline;
+  /* 2 */
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
+  /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  color: inherit;
+  /* 2 */
+  display: table;
+  /* 1 */
+  max-width: 100%;
+  /* 1 */
+  padding: 0;
+  /* 3 */
+  white-space: normal;
+  /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  /* 1 */
+  padding: 0;
+  /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+.nav {
+  padding: 0;
+}
+
+.nav .logo {
+  margin-right: auto;
+}
+
+.nav .logo:hover {
+  color: #000;
 }
 
 .nav__toggle {
@@ -34,6 +387,8 @@ body {
   cursor: pointer;
   margin: 0rem 1rem;
   padding: 1.6em;
+  position: fixed;
+  z-index: 1500;
 }
 
 .nav__toggle .svg {
@@ -54,20 +409,20 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   gap: 2rem;
   z-index: 1000;
   position: absolute;
   width: 100%;
   padding: 3em;
-  background-color: #fff;
   max-height: 0px;
   -webkit-transition: max-height 1s ease;
   transition: max-height 1s ease;
+  position: fixed;
 }
 
 .nav__element {
@@ -93,8 +448,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .nav__socials #linkedin:hover {
@@ -111,6 +466,7 @@ body {
 
 #nav__checkbox:checked ~ ul.nav__menu {
   max-height: 500px;
+  background-color: #fff;
 }
 
 #nav__checkbox:checked ~ label.nav__toggle .close {
@@ -127,8 +483,8 @@ body {
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: baseline;
-    -ms-flex-align: baseline;
-    align-items: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
   .nav__toggle {
     display: none;
@@ -136,15 +492,15 @@ body {
   .nav__menu {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     position: static;
     -webkit-box-pack: end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
     -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
   .nav__socials {
     display: -webkit-box;
@@ -152,44 +508,71 @@ body {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
 .header {
-  background-color: #fff;
-  background-image: url("../../assets/wave.svg");
+  background-color: #b9e6f5;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  height: 80vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header__title {
-  font-size: 2rem;
-  padding: 1rem;
+  font-size: 1.3rem;
+}
+
+.header__title span {
+  color: #e60856;
 }
 
 .header__subtitle {
   padding: 1rem;
-  font-size: 1.3rem;
+  font-size: 1rem;
   z-index: 1;
   text-align: center;
+}
+
+.header__subtitle span {
+  color: #e60856;
+}
+
+.header__icon {
+  cursor: pointer;
+  font-size: 3rem;
+  position: relative;
+  top: 50px;
+  color: #000;
+}
+
+.header__icon:hover {
+  color: #e60856;
+}
+
+@media screen and (min-width: 480px) {
+  .header__title {
+    font-size: 2rem;
+  }
+  .header__subtitle {
+    font-size: 1.3rem;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -201,21 +584,138 @@ body {
 @media screen and (min-width: 1024px) {
   .header {
     -webkit-box-align: start;
-    -ms-flex-align: start;
-    align-items: flex-start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
   .header__title {
     font-size: 3.5rem;
-    padding: 1rem;
+    padding: 1rem 3rem;
   }
   .header__subtitle {
-    padding: 0 1.2rem;
+    padding: 0 3.2rem;
     font-size: 2rem;
     width: 750px;
     text-align: left;
   }
-  .header__button {
-    margin: 1rem !important;
+  .header__icon {
+    top: 15rem;
+    left: 900px;
+  }
+}
+
+.about {
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about__container {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.about__container__image {
+  height: 274px;
+  width: 85%;
+  border-radius: 50%;
+  margin-bottom: 1em 0;
+}
+
+.about__container__header {
+  color: #e60856;
+  font-size: 1.3rem;
+  margin-top: 1em;
+}
+
+.about__container__underline {
+  border-bottom: 2px solid #e60856;
+  width: 40px;
+  margin-bottom: 1em;
+}
+
+.about__container__description {
+  text-align: left;
+  font-size: 0.8rem;
+  width: 317px;
+}
+
+.about__container__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  position: relative;
+  right: 10px;
+  margin-top: 1em;
+}
+
+@media screen and (min-width: 480px) {
+  .about__container__image {
+    height: 360px;
+  }
+  .about__container__header {
+    font-size: 2rem;
+  }
+  .about__container__description {
+    width: 430px;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .about__container__image {
+    height: 300px;
+    width: 300px;
+    position: relative;
+    left: 100px;
+  }
+  .about__container__description {
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .about__container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 3em;
+  }
+  .about__container__image {
+    height: 400px;
+    width: 400px;
+    position: static;
+  }
+  .about__container__text {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about__container__button {
+    right: 8px;
   }
 }
 
@@ -223,12 +723,267 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  gap: 2rem;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+  background-color: lightblue;
+}
+
+.projects__icon {
+  cursor: pointer;
+  font-size: 3rem;
+  position: relative;
+  top: 5px;
+  color: #000;
+}
+
+.projects__icon:hover {
+  color: #e60856;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 10vh;
+}
+
+.footer__menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+}
+
+.footer__element {
+  list-style: none;
+  font-size: 1rem;
+}
+
+.footer__link {
+  color: inherit;
+}
+
+.footer #linkedin {
+  color: #2d2db4;
+}
+
+.footer #github {
+  color: #504f4f;
+}
+
+.footer #whatsapp {
+  color: #05ac05;
+}
+
+@media screen and (min-width: 480px) {
+  .footer__menu {
+    gap: 2rem;
+  }
+  .footer__element {
+    font-size: 1.3rem;
+  }
+}
+
+.project__slider {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2em 0;
+}
+
+.project__slider .right-arrow {
+  position: absolute;
+  top: 38%;
+  right: 100px;
+  font-size: 2.5rem;
+  color: #000;
+  z-index: 10;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.project__slider .right-arrow:hover {
+  color: #e60856;
+}
+
+.project__slider .left-arrow {
+  position: absolute;
+  top: 38%;
+  left: 100px;
+  font-size: 2.5rem;
+  color: #000;
+  z-index: 10;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.project__slider .left-arrow:hover {
+  color: #e60856;
+}
+
+.project__slider__active {
+  opacity: 1;
+  -webkit-transition-duration: 2s;
+          transition-duration: 2s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.project__slider__slide {
+  opacity: 0;
+  -webkit-transition-duration: 2s ease;
+          transition-duration: 2s ease;
+}
+
+.project__slider__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: left;
+}
+
+.project__slider__card__text__container {
+  width: 300px;
+}
+
+.project__slider__card__image {
+  width: 100%;
+  height: 27vh;
+  border-radius: 10px;
+}
+
+.project__slider__card__title {
+  color: #e60856;
+  border-bottom: 2px solid #e60856;
+  padding-top: 2.5em;
+  margin: 0.5em 0;
+  width: 50px;
+  font-size: 1.3rem;
+}
+
+.project__slider__card__subtitle {
+  margin: 1em 0;
+  font-size: 1rem;
+}
+
+.project__slider__card__paragraph {
+  font-size: 0.8rem;
+}
+
+.project__slider__button__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
+  text-align: center;
+  padding: 2em 0;
+}
+
+@media screen and (min-width: 480px) {
+  .project__slider .right-arrow {
+    right: 160px;
+  }
+  .project__slider .left-arrow {
+    left: 160px;
+  }
+  .project__slider__card__text__container {
+    width: 450px;
+  }
+  .project__slider__card__image {
+    height: 33vh;
+  }
+  .project__slider__card__title {
+    font-size: 2rem;
+  }
+  .project__slider__card__subtitle {
+    font-size: 1.3rem;
+  }
+  .project__slider__card__paragraph {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .project__slider .right-arrow {
+    top: 55%;
+    right: 270px;
+  }
+  .project__slider .left-arrow {
+    top: 55%;
+    left: 270px;
+  }
+  .project__slider__card__image {
+    height: 40vh;
+  }
+  .project__slider__card__text__container {
+    width: 550px;
+  }
+  .project__slider__card__title {
+    padding-top: 1em;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .project__slider .right-arrow {
+    top: 25%;
+    right: -80px;
+  }
+  .project__slider .left-arrow {
+    top: 25%;
+    left: -80px;
+  }
+  .project__slider__card__image {
+    height: 40vh;
+  }
+  .project__slider__card__text__container {
+    width: 500px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .project__slider .right-arrow {
+    right: -80px;
+  }
+  .project__slider .left-arrow {
+    left: -80px;
+  }
+  .project__slider__card__image {
+    height: 45vh;
+  }
 }
 /*# sourceMappingURL=main.css.map */
