--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -11,16 +11,16 @@
   justify-content: center;
   align-items: center;
   &__title {
-    font-size: $font-size-m;
+    font-size: 3rem;
+    margin-bottom: 1rem;
     span {
       color: $color-primary;
     }
   }
   &__subtitle {
-    padding: 1rem;
-    font-size: $font-size-s;
+    font-size: 2.5rem;
     z-index: $z-normal;
-    text-align: center;
+    text-align: left;
     span {
       color: $color-primary;
     }
@@ -29,8 +29,7 @@
   &__icon {
     cursor: pointer;
     font-size: 3rem;
-    position: relative;
-    top: 50px;
+    margin-top: 2em;
     color: #000;
     &:hover {
       color: $color-primary;
@@ -38,43 +37,38 @@
   }
 }
 
-// Mobile +480px
-@include mq(s) {
-  .header {
-    &__title {
-      font-size: $font-size-l;
-    }
-    &__subtitle {
-      font-size: $font-size-m;
-    }
-  }
-}
-
 // Tablet +768px
 @include mq(m) {
   .header {
+    &__title {
+      font-size: 5rem;
+      text-align: center;
+    }
     &__subtitle {
       width: 500px;
+      font-size: 4rem;
     }
   }
 }
 // Desktop +1024px
 @include mq(l) {
   .header {
-    align-items: flex-start;
+    align-items: center;
     &__title {
-      font-size: $font-size-xl;
-      padding: 1rem 3rem;
+      font-size: 5rem;
+      width: 730px;
     }
     &__subtitle {
-      padding: 0 3.2rem;
-      font-size: $font-size-l;
-      width: 750px;
-      text-align: left;
+      font-size: 4rem;
     }
+    &__icon__container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     &__icon {
-      top: 15rem;
-      left: 900px;
+      position: static;
     }
   }
 }
