--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: lightblue;
+  background-color: rgb(185, 230, 245);
   &__icon {
     cursor: pointer;
     font-size: 3rem;
