--- a/src/scss/components/_projectslider.scss
+++ b/src/scss/components/_projectslider.scss
@@ -44,13 +44,15 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    &__text__container{
+
+    &__text__container {
       width: 300px;
     }
     &__image {
       width: 100%;
       height: 27vh;
       border-radius: 10px;
+      box-shadow: 1em 1em 2em #000;
     }
     &__title {
       color: $color-primary;
@@ -73,6 +75,9 @@
     justify-content: center !important;
     text-align: center;
     padding: 2em 0;
+    &__link {
+      text-decoration: none;
+    }
   }
 }
 
@@ -86,7 +91,7 @@
       left: 160px;
     }
     &__card {
-      &__text__container{
+      &__text__container {
         width: 450px;
       }
       &__image {
