--- a/src/scss/components/_projectslider.scss
+++ b/src/scss/components/_projectslider.scss
@@ -53,6 +53,7 @@
       height: 27vh;
       border-radius: 10px;
       box-shadow: 1em 1em 2em #000;
+      margin-bottom: 2em;
     }
     &__title {
       color: $color-primary;
