--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -83,7 +83,7 @@
       }
       &__description {
         width: 500px;
-        font-size: $font-size-m;
+        font-size: $font-size-s;
       }
     }
   }
